<resources>
    <string name="app_name">Instagram</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_reels">Reels</string>
    <string name="title_shop">Shop</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>